Add application layout diagram and improved running instructions
Co-authored-by: gsatbud <54459231+gsatbud@users.noreply.github.com>