@@ -2,6 +2,32 @@
 
 A simple JavaFX GUI application for browsing files and directories.
 
+## Application Layout
+
+```
+┌─────────────────────────────────────────────────────────────────┐
+│ JavaFX File Browser                                        [_][□][×]│
+├─────────────────────────────────────────────────────────────────┤
+│ [Browse Directory...] [Home Directory] [Refresh]                │
+├─────────────────────────┬───────────────────────────────────────┤
+│ File Tree               │ File Information                      │
+│                         │                                       │
+│ ▼ /home/user            │ Name: Documents                       │
+│   ▶ Desktop             │ Path: /home/user/Documents            │
+│   ▼ Documents           │ Type: Directory                       │
+│     • file1.txt         │ Readable: true                        │
+│     • file2.pdf         │ Writable: true                        │
+│     ▶ Projects          │ Executable: true                      │
+│   ▶ Downloads           │ Last Modified: Nov 20 2025 02:15 AM   │
+│   ▶ Pictures            │                                       │
+│                         │ Contents:                             │
+│                         │   Directories: 1                      │
+│                         │   Files: 2                            │
+├─────────────────────────┴───────────────────────────────────────┤
+│ Status: Loaded /home/user                                       │
+└─────────────────────────────────────────────────────────────────┘
+```
+
 ## Features
 
 - Browse directories using a tree view
@@ -26,11 +52,20 @@ mvn clean compile
 
 ## Running
 
-To run the JavaFX application:
+To run the JavaFX application using Maven:
 
 ```bash
 mvn javafx:run
 ```
+
+Alternatively, after building, you can run the application from the JAR:
+
+```bash
+mvn clean package
+java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -cp target/file-browser-1.0-SNAPSHOT.jar com.github.skills.filebrowser.FileBrowserApp
+```
+
+Note: Replace `$PATH_TO_FX` with the path to your JavaFX SDK lib directory if not using Maven.
 
 ## Usage
 
